# 3D_renderer

./: CMakeLists.txt  main.cpp
math/: vec3.h
